fixed list initialization